--- a/event/templates/about.html
+++ b/event/templates/about.html
@@ -1,18 +1,100 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h2 class="mt-3">About Page</h2>
-    <small class="text-muted">
-        Work under progress!! 
-    </small>
+    <p>
+        Event Portal website for College Events. 
+    </p>
+    <br>
+    <h3 class="text-center mt-5">Devs:</h3>
+   
+<div class="row">
+    <div class="col-lg-4 wrap">
+  <div class="card_a">
+    <div class="card_a-liner">
+    <figure><img src="{{ url_for('static', filename='profile_pics/' +'ujjwal.jpeg')}}" alt="" />       </figure>
+    <div class="card_a--social">
+      <ul>
+        <li class="twitter"><a href="https://twitter.com/ujjwalkrishna7"><i class="fab fa-twitter"></i></a></li>
+        <li class="linkedin"><a href="https://github.com/ujjwalkrishna7/"><i class="fab fa-github"></i></a></li>
+      </ul>
+    </div>
+    <div class="card_a--title">
+      <h3>Ujjwal Krishna</h3>
+      <p>Web Developer/
+          UI UX Designer</p>
+    </div>
+    <div class="card_a--desc">
+      <hr />
+      <p>Designing Web and Visuals for the funs.</p>
+    </div>
+      <div class="card_a--btn">
+        <a href="https://www.linkedin.com/in/ujjwal-krishna-701b40190/">
+          <span class="moreinfo">More Info</span>
+          <span class="fullprof">View Full Profile</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="col-lg-4 wrap">
+  <div class="card_a">
+    <div class="card_a-liner">
+    <figure><img src="{{ url_for('static', filename='profile_pics/' +'saurav.jpeg')}}" alt="" />       </figure>
+    <div class="card_a--social">
+      <ul>
+        <li class="twitter"><a href="https://twitter.com/SauravSPurusho2"><i class="fab fa-twitter"></i></a></li>
+        <li class="linkedin"><a href="https://github.com/Saurav-S-Purushothaman"><i class="fab fa-github"></i></a></li>
+      </ul>
+    </div>
+    <div class="card_a--title">
+      <h3>Saurav S</h3>
+      <p>Web Developer</p>
+    </div>
+    <div class="card_a--desc">
+      <hr />
+      <p>I am web developer specialised in creating beautiful fully functional websites.</p>
+    </div>
+      <div class="card_a--btn">
+        <a href="https://www.linkedin.com/in/saurav-s-purushothaman-5b8487188/">
+          <span class="moreinfo">More Info</span>
+          <span class="fullprof">View Full Profile</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="col-lg-4 wrap">
+  <div class="card_a">
+    <div class="card_a-liner">
+    <figure><img src="{{ url_for('static', filename='profile_pics/' +'rohith.jpeg')}}" alt="" />       </figure>
+    <div class="card_a--social">
+      <ul>
+        <li class="twitter"><a href="https://twitter.com/RohitRameshNair"><i class="fab fa-twitter"></i></a></li>
+        <li class="linkedin"><a href="https://github.com/rohith-crypto"><i class="fab fa-github"></i></a></li>
+      </ul>
+    </div>
+    <div class="card_a--title">
+      <h3>Rohith Nair</h3>
+      <p>Python Developer</p>
+    </div>
+    <div class="card_a--desc">
+      <hr />
+      <p>Python dev who leaves no stone unturned for providing users with trouble free web experience.</p>
+    </div>
+      <div class="card_a--btn">
+        <a href="https://www.linkedin.com/in/rohith-nair-a41026173">
+          <span class="moreinfo">More Info</span>
+          <span class="fullprof">View Full Profile</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+  </div>
+
+ 
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
 {% endblock content %}
