--- a/event/templates/approve_admin.html
+++ b/event/templates/approve_admin.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %} {% block content %}
 
-<!-- Cards, looped using for -->
+
 <section>
   <h3 class="text-center border-bottom">Events to be Approved.</h3>
   <div class="container mt-5">
     <div class="row">
       {% for event in event_value %} {% if event.is_verified == False %}
-       <div class="col-md-3 mb-5">
+       <div class="col-lg-3 col-md-6 mb-5">
         <a href="{{ url_for('events.event_approve', event_id=event.id) }}" class="card">
           <img
             src="{{url_for('static', filename='banner_pics/' + event.banner)}}"
