--- a/event/templates/home.html
+++ b/event/templates/home.html
@@ -6,7 +6,7 @@
   <div class="container mt-5">
     <div class="row">
       {% for event in event_value.items %} {% if event.is_verified == True %}
-      <div class="col-md-3 mb-5">
+      <div class="col-lg-3 col-md-6 mb-5">
         <a href="{{ url_for('events.event', event_id=event.id) }}" class="card">
           <img
             src="{{url_for('static', filename='banner_pics/' + event.banner)}}"
