--- a/event/templates/my_events.html
+++ b/event/templates/my_events.html
@@ -7,7 +7,7 @@
   <div class="container mt-5">
     <div class="row">
       {% if events.items %} {% for event in events.items %}
-      <div class="col-md-3 mb-5">
+      <div class="col-lg-3 col-md-6 mb-5">
         <a href="{{ url_for('events.event', event_id=event.id) }}" class="card">
           <img
             src="{{url_for('static', filename='banner_pics/' + event.banner)}}"
