changed navbar icon

--- a/event/templates/layout.html
+++ b/event/templates/layout.html
@@ -100,7 +100,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                <i class="fas fa-user-circle fa-2x usercircle"></i
+                <i class="fas fa-plus-circle fa-2x usercircle"></i
               ></a>
                 
               <ul
